--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,6 +29,7 @@ dist.jar=${dist.dir}/DrivingSchoolCMS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Undecorator.jar=lib/Undecorator.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -38,7 +38,8 @@ javac.classpath=\
     ${javafx.runtime}/lib/jfxrt.jar:\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
-    ${javafx.runtime}/lib/plugin.jar
+    ${javafx.runtime}/lib/plugin.jar:\
+    ${file.reference.Undecorator.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,11 +64,14 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 javafx.binarycss=false
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
 javafx.deploy.permissionselevated=true
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
@@ -77,7 +81,9 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=
+javafx.main.class=com.mjwtech.Main
+javafx.native.bundling.enabled=false
+javafx.native.bundling.type=none
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -99,6 +105,7 @@ jnlp.enabled=false
 main.class=com.javafx.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=Default_JavaFX_Platform
 run.classpath=\
     ${dist.jar}:\
