Changed the background of the main content area.
Added method to apply event handlers to toggle buttons in the Main anchorpane.

Will throw and error because packages for course, employee, and vehicle have not yet been added.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/DrivingSchoolCMS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.JavaFXDialogs.jar=lib/JavaFXDialogs.jar
+file.reference.jtds-1.3.0.jar=lib/jtds-1.3.0.jar
 file.reference.Undecorator.jar=lib/Undecorator.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -39,7 +41,9 @@ javac.classpath=\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
     ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.Undecorator.jar}
+    ${file.reference.Undecorator.jar}:\
+    ${file.reference.jtds-1.3.0.jar}:\
+    ${file.reference.JavaFXDialogs.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +76,7 @@ javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=false
-javafx.deploy.permissionselevated=true
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -97,7 +101,7 @@ javafx.run.height=600
 javafx.run.width=800
 javafx.runtime=${platforms.Default_JavaFX_Platform.javafx.runtime.home}
 javafx.sdk=${platforms.Default_JavaFX_Platform.javafx.sdk.home}
-javafx.signing.enabled=true
+javafx.signing.enabled=false
 javafx.signing.type=self
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
