--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -114,6 +114,7 @@ platform.active=Default_JavaFX_Platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}
+run.jvmargs=-Xms100m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
