Fixed FXMLLoader problem caused by folder organization into MVC.
Added link to Add New Customer Page.

Added basic form validation. Next step is to create on the fly validation.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.JavaFXDialogs.jar=lib/JavaFXDialogs.jar
+file.reference.jfxtras-labs-2.2-r4.jar=lib/jfxtras-labs-2.2-r4.jar
 file.reference.jtds-1.3.0.jar=lib/jtds-1.3.0.jar
 file.reference.Undecorator.jar=lib/Undecorator.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${javafx.runtime}/lib/plugin.jar:\
     ${file.reference.Undecorator.jar}:\
     ${file.reference.jtds-1.3.0.jar}:\
-    ${file.reference.JavaFXDialogs.jar}
+    ${file.reference.JavaFXDialogs.jar}:\
+    ${file.reference.jfxtras-labs-2.2-r4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
