Added main application class into MVC architecture

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -88,7 +88,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=com.mjwtech.Main
+javafx.main.class=com.mjwtech.main.model.Main
 javafx.native.bundling.enabled=false
 javafx.native.bundling.type=none
 javafx.preloader.class=
@@ -117,7 +117,6 @@ platform.active=Default_JavaFX_Platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}
-run.jvmargs=-Xms100m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
