--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,10 +42,10 @@ javac.classpath=\
     ${javafx.runtime}/lib/deploy.jar:\
     ${javafx.runtime}/lib/javaws.jar:\
     ${javafx.runtime}/lib/plugin.jar:\
-    ${file.reference.Undecorator.jar}:\
     ${file.reference.jtds-1.3.0.jar}:\
     ${file.reference.JavaFXDialogs.jar}:\
-    ${file.reference.jfxtras-labs-2.2-r4.jar}
+    ${file.reference.jfxtras-labs-2.2-r4.jar}:\
+    ${file.reference.Undecorator.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
