Made double click required to open view notes in advanced pane.
Added Fade effect to advanced pane when closing.

Added Progress Indicator for adding new note.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -117,6 +117,7 @@ platform.active=Default_JavaFX_Platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}
+run.jvmargs=-Xmx205m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
